src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>CTMCTMCallId__c</fullName>
        <description>Upsert External ID</description>
        <externalId>true</externalId>
        <label>CTMCallId</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTM_Agent_Name__c</fullName>
        <label>CTM Agent Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Date__c</fullName>
        <label>CTM Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CTM_Hour__c</fullName>
        <label>CTM Hour</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Menu_Keypresses__c</fullName>
        <label>CTM Menu Keypresses</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Message_Body__c</fullName>
        <label>CTM Message Body</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Recording_URL__c</fullName>
        <label>CTM Recording URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CTM_Ring_Time__c</fullName>
        <label>CTM Ring Time</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Source_Tag__c</fullName>
        <label>CTM Source Tag</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Status__c</fullName>
        <label>CTM Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Tags__c</fullName>
        <label>CTM Tags</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Talk_Time__c</fullName>
        <label>CTM Talk Time</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Total_Time__c</fullName>
        <label>CTM Total Time</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Tracking_Number__c</fullName>
        <label>CTM Tracking Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Tracking_Source_Description__c</fullName>
        <label>CTM Tracking Source Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Tracking_Source__c</fullName>
        <label>CTM Tracking Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Transfer_To__c</fullName>
        <label>CTM Transfer To</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTM_Type__c</fullName>
        <label>CTM Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_ID__c</fullName>
        <label>Call ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Notes__c</fullName>
        <label>Call Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Caller_ID__c</fullName>
        <label>Caller ID</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Date_and_Time_of_Correspondence__c</fullName>
        <label>Date and Time of Correspondence</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>Due Date and Time for Tasks</description>
        <label>Due Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Task_Needed__c</fullName>
        <description>Task Needed?</description>
        <label>Task Needed:</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>